# game-of-life

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: golc.h  screen.h
src/: CMakeLists.txt  Makefile  cli.c  main.c  screen.c  util.c
